--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,4 +10,5 @@ commands:
   removecore:
     description: removecore
   textinput:
-    description: textinput
+    description: textinput  givecore:
+    description: givecore
