add FoxyCore dependency
This change moves MessageManager and GuiElements to external library

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,6 +9,6 @@ commands:
     description: spawncore
   removecore:
     description: removecore
-  textinput:
-    description: textinput  givecore:
+  givecore:
     description: givecore
+depend:  [FoxyCore]
